Prepare dol mdV 12.0 : implement relevant commits in 12.0_alphadiab

--- a/htdocs/langs/fr_FR/main.lang
+++ b/htdocs/langs/fr_FR/main.lang
@@ -991,6 +991,9 @@ AssignedTo=Assigné à
 Deletedraft=Supprimer brouillon
 ConfirmMassDraftDeletion=Confirmation de suppression de brouillon en masse
 FileSharedViaALink=Fichier partagé via un lien
+ParentCategory=Catégorie parente
+FirstLevelChildCategory=Catégorie enfant de premier niveau
+SecondLevelChildCategory=Catégorie enfant de second niveau
 SelectAThirdPartyFirst=Sélectionnez d'abord un tiers...
 YouAreCurrentlyInSandboxMode=Vous travaillez actuellement dans le mode "bac à sable" de %s
 Inventory=Inventaire
